Refactor existing create modals

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
@@ -14,6 +14,7 @@
   </div>
 
   <div class="entity-view__card__actions">
+    <div (click)="cancel.emit(true)">CANCEL</div>
     <div (click)="saveAffiliate()">SAVE</div>
   </div>
 </div>
