--- a/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-add-new/campaign-add-new.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div *ngIf="mode === modes.Update" (click)="cancel.emit(true)">CANCEL</div>
+    <div (click)="cancel.emit(true)">CANCEL</div>
     <div (click)="saveCampaign()">SAVE</div>
   </div>
 </div>
