--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-add-new/product-schedule-add-new.component.html
@@ -27,7 +27,7 @@
   </form>
 
   <div *ngIf="mode !== view" class="entity-view__card__actions product-schedule-view__details__actions">
-    <div *ngIf="mode === update" (click)="cancel.emit(true)">CANCEL</div>
+    <div (click)="cancel.emit(true)">CANCEL</div>
     <div (click)="saveSchedule(productScheduleInputForm.form.valid)">SAVE</div>
   </div>
 </div>
