--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -4,7 +4,7 @@
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="showDialog()" class="entity-index__add"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
@@ -35,6 +35,6 @@
   </md-card>
 </div>
 
-<div *ngIf="showAddDialog" class="full-overlay">
-  <customer-add-new [customer]="customer" (save)="saveCustomer()" (cancel)="hideDialog()"></customer-add-new>
+<div *ngIf="addMode" class="full-overlay">
+  <customer-add-new class="modal-center" [customer]="entity" (save)="createEntity($event)" (cancel)="closeAddMode()"></customer-add-new>
 </div>
