--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -153,4 +153,8 @@ $title-color: #8D8888;
   height: 100%;
   min-height: calc(100vh - 70px);
   background: rgba(0,0,0,0.3);
+
+  .modal-center {
+    margin: 50px auto;
+  }
 }
