--- a/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
+++ b/src/app/pages/trackers-page/tracker-view/tracker-view.component.html
@@ -29,78 +29,7 @@
   <md-tab-group [(selectedIndex)]="selectedIndex">
     <md-tab>
 
-      <div class="tracker-view__card">
-        <div class="tracker-view__card__header">
-          <div class="tracker-view__card__header__main">Tracker Details</div>
-          <md-icon [md-menu-trigger-for]="trackerOptions">more_vert</md-icon>
-          <md-menu #trackerOptions="mdMenu" x-position="before">
-            <button md-menu-item (click)="enableEdit()"> Edit Tracker </button>
-          </md-menu>
-        </div>
-
-        <div class="tracker-view__card__content">
-          <div *ngIf="addMode || updateMode" class="tracker-view__card__content__name">
-            <md-input placeholder="Tracker Name" [(ngModel)]="entity.name"></md-input>
-          </div>
-
-          <div class="tracker-view__card__content__type">
-            <dropdown-component
-              class="tracker-view__dropdown--inline"
-              [disabled]="!(updateMode || addMode)"
-              [selected]="entity.type"
-              [required]="true"
-              [placeholder]="'Tracking type'"
-              (onSelect)="setType($event)"
-              [options]="['html', 'postback']">
-            </dropdown-component>
-          </div>
-
-          <div class="tracker-view__card__content__event-type">
-            <dropdown-component
-              class="tracker-view__dropdown--inline"
-              [disabled]="!(updateMode || addMode)"
-              [selected]="updateMode || addMode ? '' : (entity.eventType && entity.eventType.length > 0 ? entity.eventType : 'all')"
-              [placeholder]="updateMode || addMode ? 'add event type' : 'Event Type'"
-              (onSelect)="addEventType($event)"
-              [options]="['upsell', 'lead', 'main']">
-            </dropdown-component>
-            <ng-container *ngIf="updateMode || addMode; else eventTypeNormal">
-              <span *ngFor="let t of entity.eventType"> <md-icon class="cancel" *ngIf="updateMode || addMode" (click)="removeEventType(t)">cancel</md-icon> {{t}} </span>
-            </ng-container>
-          </div>
-
-          <div *ngIf="entity.link && !updateMode" class="tracker-view__card__content__link">
-            <div class="tracker-view__card__content__label">Tracking link:</div>
-            <input type="text" #urlField class="share-link__url__content" value="{{entity.link}}" readonly>
-            <md-icon md-tooltip="Copy to clipboard" (click)="copyUrlToClipboard(urlField)">content_copy</md-icon>
-          </div>
-
-          <div class="tracker-view__card__content__body">
-            <div class="tracker-view__card__content__label">Tracking data:</div>
-
-            <codemirror [class.invisible]="entity.type !== 'html'" [(ngModel)]="entity.body" [config]="config"></codemirror>
-
-            <ng-container *ngIf="entity.type !== 'html'">
-              <md-textarea class="codeblock" *ngIf="updateMode || addMode; else bodyNoEdit" [(ngModel)]="entity.body"></md-textarea>
-
-              <ng-template #bodyNoEdit>
-                <div class="codeblock">
-                  {{entity.body}}
-                </div>
-              </ng-template>
-            </ng-container>
-          </div>
-
-          <div class="tracker-view__card__content__buttons" *ngIf="updateMode">
-            <div class="tracker-cancel" (click)="cancelEdit()">CANCEL</div>
-            <div class="tracker-update" (click)="updateTracker()">UPDATE</div>
-          </div>
-          <div class="tracker-view__card__content__buttons" *ngIf="addMode" (click)="saveTracker()">
-            <div class="tracker-save">SAVE</div>
-          </div>
-
-        </div>
-      </div>
+      <tracker-add-new [entity]="entity" [mode]="viewMode ? modes.View : modes.Update" (changeMode)="setMode($event)" (save)="saveOrUpdate($event)" (cancel)="cancelUpdate()"></tracker-add-new>
 
     </md-tab>
     <md-tab>
