--- a/src/app/pages/smtp-providers-page/smtp-providers-index/smtp-providers.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-providers-index/smtp-providers.component.html
@@ -4,7 +4,7 @@
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/smtpproviders','add']"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
@@ -35,4 +35,8 @@
 
     </md-card-content>
   </md-card>
+</div>
+
+<div *ngIf="addMode" class="full-overlay">
+  <smtp-provider-add-new class="modal-center" [entity]="entity" [mode]="modes.Add" (cancel)="closeAddMode()" (save)="createEntity($event)"></smtp-provider-add-new>
 </div>
